--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Encriptador/Desencriptador Alura</title>
         <script src="main.js"></script>
+        <script src="https://kit.fontawesome.com/036b343b6a.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="buttons.css">
@@ -11,9 +12,9 @@
         <h1 id="textTitle">Encriptador Alura Challenge</h1>
         <div class="card">
             <div class="primScreen">
-                <label for="encryptedMessage">Escriba el texto:</label>
+                <label for="encryptedMessage">Introduzca un texto o mensaje:</label>
                 <input class="css-input" id="text" placeholder="Escriba en minusculas y sin signos especiales"/>
-                <label for="option">Opción:</label>
+                <label for="option">Seleccione una opción:</label>
                 <select id="option" class="Selectbutton" >
                     <option value="encript">Encriptar</option>
                     <option value="decript">Desencriptar</option>
@@ -26,5 +27,16 @@
                 <button id="myButton" class="button"><span class="button-content">Copiar</span></button>
             </div>
         </div>
+        <footer>
+            <div class="container">
+              <p>© 2023 Desarrollado por Eric Rojo</p>
+              <div class="social-icons">
+                <a href="https://github.com/RojoRX" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x" style="color: rgb(255, 255, 255);"></i></a>
+                <a href="https://www.facebook.com/EricRojo23" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook fa-2x" style="color: rgb(249, 249, 249);"></i></a>
+                <a href="https://www.linkedin.com/in/erick-rojas-chigua-569505276" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x" style="color: rgb(255, 255, 255);"></i></a>
+              </div>
+            </div>
+ 
+          </footer>          
     </body>
 </html>
