--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button id="optionButton" class="button"><span class="button-content">Procesar</span></button>
             </div>
             <div class="resScreen">
-                <label>Resultado:</label>
+                <label>Texto Procesado:</label>
                 <input id="result" type="text" class="css-input" placeholder="Mensaje Procesado">
                 <button id="myButton" class="button"><span class="button-content">Copiar</span></button>
             </div>
