Assets Folder Added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>Encriptador/Desencriptador Alura</title>
         <script src="main.js"></script>
         <script src="https://kit.fontawesome.com/036b343b6a.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="buttons.css">
+        <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href="assets/css/buttons.css">
     </head>
     <body>
         <h1 id="textTitle">Encriptador Alura Challenge</h1>
