Assets JS Added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Encriptador/Desencriptador Alura</title>
-        <script src="main.js"></script>
+        <script src="assets/js/main.js"></script>
         <script src="https://kit.fontawesome.com/036b343b6a.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/styles.css">
