--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="stylesheet" href="assets/css/buttons.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
     <body>
         <h1 id="textTitle">Encriptador Alura Challenge</h1>
