--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="card">
             <div class="primScreen">
                 <label for="encryptedMessage">Introduzca un texto o mensaje:</label>
-                <input class="css-input" id="text" placeholder="Escriba en minusculas y sin signos especiales"/>
+                <input class="css-input" id="text" placeholder="Escriba en minusculas y sin signos especiales" autocapitalize="off"/>
                 <label for="option">Seleccione una opción:</label>
                 <select id="option" class="Selectbutton" >
                     <option value="encript">Encriptar</option>
